tests/baselines/reference/mergedInterfacesWithInheritedPrivates2.errors.txt
==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates2.ts (5 errors) ====
    class C {
        private x: number;
    }
    
    class C2 {
        private w: number;
    }
    
    interface A extends C {
        y: string;
    }
    
    interface A extends C2 {
        z: string;
    }
    
    class D extends C implements A { // error
          ~
!!! error TS2421: Class 'D' incorrectly implements interface 'A':
!!! error TS2421:   Private property 'w' cannot be reimplemented.
        private w: number;
        y: string;
        z: string;
    }
    
    class E extends C2 implements A { // error
          ~
!!! error TS2416: Class 'E' incorrectly extends base class 'C2':
!!! error TS2416:   Private property 'w' cannot be reimplemented.
          ~
!!! error TS2421: Class 'E' incorrectly implements interface 'A':
!!! error TS2421:   Property 'x' is missing in type 'E'.
        w: number;
        y: string;
        z: string;
    }
    
    var a: A;
    var r = a.x; // error
            ~~~
!!! error TS2341: Property 'C.x' is inaccessible.
    var r2 = a.w; // error
             ~~~
!!! error TS2341: Property 'C2.w' is inaccessible.